feat:express & handlebars intergrated

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -18,6 +18,9 @@
   },
   "homepage": "https://github.com/frzasa/Personal-web#readme",
   "dependencies": {
-    "express": "^4.21.2"
+    "expess": "^0.0.1-security",
+    "express": "^4.21.2",
+    "hbs": "^4.2.0",
+    "nodemon": "^3.1.9"
   }
 }
